@@ -314,7 +314,7 @@ libtool_build_prerequisites ()
     func_verbose "ltdl_dir='$ltdl_dir'"
 
     # Whip up a dirty Makefile:
-    makes='Makefile.am libltdl/Makefile.inc'
+    makes='Makefile.am libltdl/ltdl.mk'
     rm -f Makefile
     {
       echo "aux_dir = $build_aux"
